--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h2>I'm a Web Developer in training</h2>
         <hr >
         <a href="/4.3 HTML Porfolio Project\public\movie-ranking.html"><h3>Movie Ranking Project</h3></a>
-        <img src="/4.3 HTML Porfolio Project\Ekrānuzņēmums 2025-06-11 202943.png" width="500" height="500" alt="list of my favorite movies"/>
+        <img src="/Ekrānuzņēmums 2025-06-11 202943.png" width="500" height="500" alt="list of my favorite movies"/>
         <br >
         <br >
         <a href="/4.3 HTML Porfolio Project\public\birthday-invite.html"><h3>Birthday Invite Project</h3></a>
