--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br >
         <br >
         <a href="/4.3 HTML Porfolio Project\public\birthday-invite.html"><h3>Birthday Invite Project</h3></a>
-        <img src="Ekrānuzņēmums 2025-06-11 202908.png" width="350" height="500" alt="list of my favorite movies"/>
+        <img src="/Ekrānuzņēmums 2025-06-11 202908.png" width="350" height="500" alt="list of my favorite movies"/>
         <hr >
         <a href="/4.3 HTML Porfolio Project\public\about.html"> About Me </a>
         <br > 
